Bug 455015 - KWin scripts no longer checkable/uncheckable
Summary: KWin scripts no longer checkable/uncheckable
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kwinscripts (other bugs)
Version First Reported In: 5.24.90
Platform: Other FreeBSD
: VHI normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords: regression
: 455682 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-06-08 08:39 UTC by Tobias C. Berner
Modified: 2022-06-21 07:25 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tobias C. Berner 2022-06-08 08:39:57 UTC
SUMMARY

In 5.24.90 kwin-scripts cannot be activated. 


STEPS TO REPRODUCE
1. Go to sytemsettings -> kwin-scripts
2. Enable an extension and apply
3. Go back to settings

OBSERVED RESULT

"Enabled" kwin script is not active.


EXPECTED RESULT

Kwin script should be active


SOFTWARE/OS VERSIONS 
FreeBSD/KDE Plasma: 13.1 - 5.24.90
KDE Plasma Version: 5.24.90
KDE Frameworks Version:  5.94
Qt Version:  5.15.2 (KDE patched)

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2022-06-08 12:58:35 UTC
I can confirm the opposite thing: when I uncheck a script, click apply, leave the KCM, and come back, it's still checked.
Comment 2 Bug Janitor Service 2022-06-10 04:56:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2500
Comment 3 Alexander Lohnau 2022-06-10 10:04:16 UTC
Git commit 9419acc1ff5ccd039d68be315dd4ac161b78b615 by Alexander Lohnau.
Committed on 10/06/2022 at 04:55.
Pushed by davidedmundson into branch 'master'.

Fix KWin scripts KCM not writing it's pending states to config

M  +3    -3    src/kcmkwin/kwinscripts/module.cpp
M  +0    -2    src/kcmkwin/kwinscripts/module.h

https://invent.kde.org/plasma/kwin/commit/9419acc1ff5ccd039d68be315dd4ac161b78b615
Comment 4 David Edmundson 2022-06-10 10:23:07 UTC
Git commit 8a19796aa676f0e278a9c5c5b7096a9ab2298f0c by David Edmundson, on behalf of Alexander Lohnau.
Committed on 10/06/2022 at 10:23.
Pushed by davidedmundson into branch 'Plasma/5.25'.

Fix KWin scripts KCM not writing it's pending states to config


(cherry picked from commit 9419acc1ff5ccd039d68be315dd4ac161b78b615)

M  +3    -3    src/kcmkwin/kwinscripts/module.cpp
M  +0    -2    src/kcmkwin/kwinscripts/module.h

https://invent.kde.org/plasma/kwin/commit/8a19796aa676f0e278a9c5c5b7096a9ab2298f0c
Comment 5 Vlad Zahorodnii 2022-06-21 07:25:10 UTC
*** Bug 455682 has been marked as a duplicate of this bug. ***