Fix KWin scripts KCM not writing it's pending states to config

BUG: 455015


(cherry picked from commit 9419acc1ff5ccd039d68be315dd4ac161b78b615)